<resources>
    <string name="app_name">jjoo</string>
    <!--<string name="app_name">palacio</string>-->
    <!--<string name="WSServer">http://10.0.3.2:8080/GoOnServices/</string>-->
    <string name="WSServer">http://proyecto.onmypc.org:8080/GoOnServices/</string>
    <string name="app_label">GoOnUsuarios JJOO</string>
    <string name="action_settings">Configuración</string>
    <string name="action_viajes">Mis Viajes</string>
    <string name="action_gps">Gps</string>
    <string name="action_bus">Bus</string>
    <string name="action_sucursales">Sucursales</string>
    <string name="action_info">Info</string>
    <string name="action_calcular">Calcular</string>
    <string name="error_timeout">Tiempo de espera agotado, Intente nuevamente</string>
    <string name="error_conexion">Error en la conexión, Intente nuevamente</string>
    <string name="title_activity_login">Login</string>
    <string name="scan">Leer QR</string>
    <string name="action_newpasaje">Pasaje</string>
    <string name="item1nosotros">Sobre Nosotros</string>
    <string name="item1sucursales">Nuestras Sucursales</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_network_timeout">Error en la conexión</string>
    <string name="error_invalid_user">Usuario/Contraseña inválidos</string>
    <string name="error_invalid_email">Formato Email inválido</string>
    <string name="error_invalid_confirmacion">La contraseña no coincide con su confirmación</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="primera">Primera"</string>
    <string name="segunda">Segunda."</string>
    <string name="permission_rationale">"Permisos del contacto son necesarios para email noseque."</string>
    <string name="grilla_asiento">"Asiento"</string>
    <string name="grilla_usuario">"Usuario"</string>
    <string name="grilla_origen">"Origen"</string>
    <string name="grilla_destino">"Destino"</string>
    <string name="registro">"Regístrate!"</string>
    <string name="mensajeRegistro">"Registro de usuarios"</string>
    <string name="nombreRegistro">"Nombre"</string>
    <string name="apellidoRegistro">"Apellido"</string>
    <string name="ciRegistro">"Cédula"</string>
    <string name="fecNacRegistro">"Fecha de Nacimiento"</string>
    <string name="correoRegistro">"Correo</string>
    <string name="direccionRegistro">"Dirección"</string>
    <string name="telefonoRegistro">"Teléfono"</string>
    <string name="usuarioRegistro">"Usuario"</string>
    <string name="contraseñaRegistro">"Contraseña"</string>
    <string name="confirmacionRegistro">"Confirme su contraseña"</string>
    <string name="okRegistro">"Enviar"</string>
    <string name="creadoConExito">"ha sido creado con éxito"</string>
    <string name="creadoSinExito">"Error al crear el"</string>
    <string name="fechaIda">"Fecha del viaje"</string>
    <string name="destinoBusqueda">"Destino"</string>
    <string name="origenBusqueda">"Origen "</string>
    <string name="mensajeBusqueda">"Busque su pasaje"</string>
    <string name="error_user_not_disponible">"Usuario no diponible"</string>
    <string name="title_activity_sucursales">Sucursales</string>
    <string name="razonSocial">"Razón Social"</string>
    <string name="rut">"RUT"</string>
    <string name="pais">"Pais"</string>
    <string name="cantAsientos">"Asientos"</string>
    <string name="ok">"Ok"</string>
    <string name="cancelar">"Cancelar"</string>
    <string name="dondequieresir">"¿Dónde quieres ir?"</string>
    <string name="dondesubes">"¿Dónde subes?"</string>
    <string name="calculo_encomienda">"Cálculo de Encomienda"</string>
    <string name="qr_pasaje">"Pasaje"</string>
    <string name="calcular">"Calcular"</string>
    <string name="alto">"Alto(cm) "</string>
    <string name="largo">"Largo(cm)"</string>
    <string name="ancho">"Ancho(cm)"</string>
    <string name="peso">"Peso"</string>
    <string name="precio">"Precio  "</string>
    <string name="fechaEnvio">"Fecha Envío"</string>
    <string name="fechaPartida">"Fecha Partida"</string>
    <string name="ciEmisor">"CI Emisor"</string>
    <string name="ciReceptor">"CI Receptor"</string>
    <string name="estado">"Estado"</string>
    <string name="asiento">"Asiento"</string>
    <string name="tokenInvalido">"Credenciales Inválidas, favor inicie sesión"</string>
    <string name="origenSinDestino">"Favor seleccione el Destino"</string>
    <string name="salida">"Salida"</string>
    <string name="linea">"Línea"</string>

    <string name="getStations">"/getStations"</string>
    <string name="getTerminals">"/getTerminals"</string>
    <string name="calcPackage">"/calcPackage"</string>
    <string name="userPackages">"/userPackages"</string>
    <string name="userTickets">"/userTickets"</string>
    <string name="auth">"/auth"</string>
    <string name="getFilteredStations">"/getFilteredStations"</string>
    <string name="searchTravels">"/searchTravels"</string>
    <string name="preBuyTickets">"/preBuyTicket"</string>
    <string name="appConfirmTickets">"/appConfirmTicket"</string>
    <string name="getLastTravelLocation">"/getLastTravelLocation"</string>
    <string name="title_activity_maps">Map</string>
</resources>
