<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="15">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#234562"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:layout_weight="1"/>
    <ImageView
        android:id="@+id/iconasiento"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/iconsillabuspng"
        android:background="#234562"
        android:layout_weight="0.6"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/grilla_usuario"
        android:background="#234562"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:layout_weight="2"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/grilla_origen"
        android:background="#234562"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:layout_weight="6"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/grilla_destino"
        android:background="#234562"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:layout_weight="6"
        />

</LinearLayout>