<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear_viajes"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ViajesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:windowNoTitle="true"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_viajes_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TableLayout
                android:id="@+id/tableViaj"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/rowViaj"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="70">

                    <TextView
                        android:id="@+id/tvLineaViaj"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:textStyle="bold"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/linea"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tvOrigenViaj"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:textStyle="bold"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/origenBusqueda"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tvDestinoViaj"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="25"
                        android:textStyle="bold"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/destinoBusqueda"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tvSalidaViaj"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:textStyle="bold"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/salida"
                        android:gravity="center"/>

                </TableRow>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="3dip"
                    android:background="@color/detalles"/>

            </TableLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
